objects/copado__Deployment_Task__c.object
<CustomObject>
    <fields>
        <fullName>copado__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Perform_Manual_Task__c</fullName>
        <label>Perform Manual Task</label>
        <picklist>
            <picklistValues>
                <fullName>Before Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Deployment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Perform_in_Destination_Orgs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform in Destination Org(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Perform_in_Source_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform in Source Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Task_Description__c</fullName>
        <label>Task Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Deployment Tasks</relationshipLabel>
        <relationshipName>Deployment_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Deployment Task</label>
    <nameField>
        <label>Deployment Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>